# betrDB

./: .gitignore  README.md  pyproject.toml  requirements.txt
dbschema/: default.esdl
src/betrdb/common/: enums.py  logger.py
src/betrdb/core/: config.py  paths_config.py
src/betrdb/data/: constants.py  nba_data.py  nba_roster.py  nba_utils.py  rosters.ipynb
src/betrdb/database/: db_utils.py  pg_sql.py  quest_test.py
src/betrdb/models/: base.py
src/betrdb/models/nba/: nba_game_model.py  nba_players_model.py  nba_teams_model.py
src/betrdb/scraper/nba/nba/: settings.py
src/betrdb/scraper/ncaabb/: scrapy.cfg
src/betrdb/scraper/ncaabb/ncaabb/: items.py  middlewares.py  pipelines.py  settings.py
src/betrdb/scraper/ncaafb/: scrapy.cfg
src/betrdb/scraper/ncaafb/ncaafb/: items.py  middlewares.py  pipelines.py  settings.py
src/betrdb/scraper/nfl/nfl/: middlewares.py  settings.py
src/betrdb/scraper/nhl/nhl/: items.py  middlewares.py  pipelines.py  settings.py
src/betrdb/scraper/ufc/ufc/: middlewares.py  settings.py
src/betrdb/utilities/: timezone.py  uuid6.py
